# Virtualapp11

./: README.md  VAConfig.gradle  build.gradle  local.properties
app/: build.gradle
app/release/: output.json
app/sdk/: lib.aar
app/src/main/java/io/virtualapp/: App.java  AppComponentDelegate.java
app/src/main/java/io/virtualapp/home/: HomeActivity.java  HomePresenterImpl.java  ListAppFragment.java
app/src/main/java/io/virtualapp/sandxposed/: SandHookConfigProvider.java
app/src/main/java/io/virtualapp/utils/: DingTalk.java  SPTools.java
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
hooklib/: build.gradle
hooklib/src/main/cpp/casts/: atomic_thread_fence.cpp  atomic_thread_fence.h
lib/: .gitignore  build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt
lib/src/main/cpp/Foundation/: IORelocator.cpp  IORelocator.h  IORelocator_exports.h  Log.h  MapsRedirector.cpp  VMHook.cpp  VMHook.h  hideSegments.cpp  hideSegments.h  unistd.h  unistd_64.h
lib/src/main/cpp/Foundation/syscall/: BinarySyscallFinder.cpp
lib/src/main/cpp/Jni/: ArtMethod.h  JniHook.cpp  JniHook.h  VAJni.cpp  VAJni.h
lib/src/main/cpp/fb/jni/java/: CppException.java  CppSystemErrorException.java  UnknownCppException.java
lib/src/main/java/com/lody/virtual/: Build.java
lib/src/main/java/mirror/android/app/: IActivityTaskManager.java  Instrumentation.java
lib/src/main/java/mirror/android/location/: LocationManager.java
lib/src/main/java/mirror/android/os/: UserHandle.java
lib/src/main/res/values/: strings.xml
lib/src/main/res/values-zh-rCN/: strings.xml
(+110 files in other folders)
